package com.jobpulse.auth_service.model;

public enum UserRole {
    ADMIN,
    JOB_POSTER,
    JOB_APPLICANT
}